# build-your-own-clip-projector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
clip_projector/: __init__.py  config.py  main.py  model.py  preprocessing.py  schemas.py  security.py  service.py  train.py
docs/: architecture.md  concepts.md  openapi.yaml  operations.md  security.md  serving.md  training.md
k8s/: clip-projector.yaml  network-policy.yaml
scripts/: commit-each-file.sh  load_test.js
tests/: test_api.py  test_model.py  test_preprocessing.py  test_security.py  test_service.py
