[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-projector"
version = "1.0.0"
description = "Production-oriented, from-scratch CLIP-style multimodal embedding service"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "pydantic-settings>=2.6,<3",
  "python-multipart>=0.0.12,<1", "Pillow>=10.4,<12", "torch>=2.4,<3",
  "prometheus-client>=0.21,<1", "structlog>=24.4,<26"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=5,<7", "httpx>=0.27,<1", "ruff>=0.8,<1", "mypy>=1.13,<2", "bandit>=1.7,<2", "pip-audit>=2.7,<3"]

[project.scripts]
clip-projector = "clip_projector.main:run"

[tool.setuptools.packages.find]
include = ["clip_projector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=clip_projector --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
branch = true
source = ["clip_projector"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
strict = true
plugins = []
